Bug 406235 - Dodge all windows causes dock to hide on empty desktop
Summary: Dodge all windows causes dock to hide on empty desktop
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-04 22:52 UTC by Tyler Brown
Modified: 2019-04-05 17:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video showing the dock dodging the desktop (485.94 KB, video/mp4)
2019-04-04 22:52 UTC, Tyler Brown
Details
Envoutput (1.85 KB, text/plain)
2019-04-05 07:03 UTC, Tyler Brown
Details
Touchscreen Settings (58.51 KB, image/png)
2019-04-05 17:12 UTC, Tyler Brown
Details
Hotcorner settings (102.31 KB, image/png)
2019-04-05 17:14 UTC, Tyler Brown
Details
Current layout file (18.17 KB, text/plain)
2019-04-05 17:21 UTC, Tyler Brown
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler Brown 2019-04-04 22:52:36 UTC
Created attachment 119250 [details]
Video showing the dock dodging the desktop

SUMMARY


STEPS TO REPRODUCE
1. Enable dodge all windows
2. Click anywhere on the desktop
3. 

OBSERVED RESULT
Dock hides as if it is treating the plasmashell desktop as a window

EXPECTED RESULT
Dock should not hide as there is no proper window to dodge. 

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 18.10; Kernel 4.18.0-16-generic;
(available in About System) 
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2019-04-05 04:34:16 UTC
Dodge Active works OK in that regard in your system?
Comment 2 Tyler Brown 2019-04-05 06:46:15 UTC
This issue does not occur with the Dodge Active Windows. It also does not occur with the Dodge Maxmized setting. It only occurs under Dodge All Windows.
Comment 3 Michail Vourlakos 2019-04-05 06:49:20 UTC
It does not occur in my system,

1. Are you using latest master?
2. How did you install Latte?
3. What is your env output?
4. Are you in multi screen environment?
Comment 4 Tyler Brown 2019-04-05 07:03:05 UTC
Created attachment 119254 [details]
Envoutput

1&2: I pulled down the latest right before submitting this bug report and installed it with the install.sh script. 
3. Attached. 
4. Only a single display is attached.
Comment 5 Michail Vourlakos 2019-04-05 08:01:51 UTC
5. Changing from left to bottom edge, same problem?
Comment 6 Tyler Brown 2019-04-05 08:05:33 UTC
(In reply to Michail Vourlakos from comment #5)
> 5. Changing from left to bottom edge, same problem?

5. The issue does not occur with a dock/panel on the bottom.
Comment 7 Michail Vourlakos 2019-04-05 08:57:26 UTC
If you disable all touch gestures from plasma system settings, is it fixed?
Comment 8 Tyler Brown 2019-04-05 09:02:35 UTC
(In reply to Michail Vourlakos from comment #7)
> If you disable all touch gestures from plasma system settings, is it fixed?

I didn't have any of the touch gestures enabled in the plasma system settings.
Comment 9 Michail Vourlakos 2019-04-05 10:35:25 UTC
Show me a screenshot of your touch gestures settings in plasma systemsettings please
Comment 10 Michail Vourlakos 2019-04-05 10:36:53 UTC
Of course that also applies to screen hot corners.

Have you enabled the left hot corner?
Comment 12 Tyler Brown 2019-04-05 17:12:29 UTC
Created attachment 119259 [details]
Touchscreen Settings
Comment 13 Tyler Brown 2019-04-05 17:14:44 UTC
Created attachment 119260 [details]
Hotcorner settings

Even with all hotcorner and touchscreen settings disabled the issue still occurs.
Comment 14 Michail Vourlakos 2019-04-05 17:17:58 UTC
send me your layout file please to test it in my system
Comment 15 Tyler Brown 2019-04-05 17:21:25 UTC
Created attachment 119261 [details]
Current layout file

Current layout file
Comment 16 Michail Vourlakos 2019-04-05 17:53:16 UTC
Git commit ae69884e0431168fd470df693fbb44d2d886bcba by Michail Vourlakos.
Committed on 05/04/2019 at 17:52.
Pushed by mvourlakos into branch 'master'.

ignore PlasmaDesktop for windows tracking flags

M  +4    -0    app/view/windowstracker.cpp

https://commits.kde.org/latte-dock/ae69884e0431168fd470df693fbb44d2d886bcba