ignore PlasmaDesktop for windows tracking flags

BUG: 406235